# docerator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: run_test.yml
docerator/: __init__.py  _base.py  _params.py  doc_inherit.py
docerator/parsers/: __init__.py  _base.py  _numpydoc.py
tests/: numpydoc_classes.py  test_doc_inherit_replacements.py  test_docstring_parsing.py  test_numpy_parsing.py
